<resources>
    <string name="facebook_app_id">1285249481550769</string>
    <string name="app_name">智小星</string>
    <string name="str_url_privacy">https://privacypolicy.ibroadlink.com/privacypolicy/index.html</string>
    <string name="str_crazy_max">Mad Max</string>
    <string name="str_max">Max</string>
    <string name="cube_ptr_pull_down">Pull down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull down to refresh</string>
    <string name="cube_ptr_release_to_refresh">Release to refresh</string>
    <string name="cube_ptr_refreshing">Loading...</string>
    <string name="cube_ptr_refresh_complete">Update is finished.</string>
    <string name="cube_ptr_last_update">Last update:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;sec ago</string>
    <string name="cube_ptr_minutes_ago">&#160;min ago</string>
    <string name="cube_ptr_hours_ago">&#160;hour ago</string>
    <string name="cube_views_load_more_click_to_load_more">Tap to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All data are loaded</string>
    <string name="cube_views_load_more_loaded_empty">No data</string>
    <string name="cube_views_load_more_error">Loading failed. Tap to retry</string>
    <string name="str_err_network">Network error. Please check your network connection</string>
    <string name="warn_sdcard_miss">Can not read the SD card. Please check your SD card.</string>
    <string name="double_click_exit">Tap again to exit</string>
    <string name="str_common_quit">Exit</string>
    <string name="str_place_close">Close</string>
    <string name="update_title">Start to download updates</string>
    <string name="update_content">Downloading updates...%1$d%%</string>
    <string name="str_querying">Searching...</string>
    <string name="str_common_sure">OK</string>
    <string name="str_common_sure_delete">Confirm to delete?</string>
    <string name="str_common_ok">OK</string>
    <string name="str_common_save">Save</string>
    <string name="str_common_do_not_save">Don\'t save</string>
    <string name="str_common_cancel">Cancel</string>
    <string name="str_common_next">Next</string>
    <string name="str_common_submit">Submit</string>
    <string name="str_common_search">Search</string>
    <string name="str_common_back">Back</string>
    <string name="str_common_take_photo">Take a picture</string>
    <string name="str_common_choose_from_photos">Choose from photo gallery</string>
    <string name="str_common_choose_from_imagelib">Choose from icons</string>
    <string name="str_common_hint">Please confirm</string>
    <string name="str_common_not_wifi_network">Please connect to Wi-Fi network</string>
    <string name="str_common_add">Add</string>
    <string name="str_common_country">State/Region</string>
    <string name="str_common_finish">Done</string>
    <string name="str_common_delete">Delete</string>
    <string name="str_common_uploading">Uploading</string>
    <string name="str_common_monday">Mon</string>
    <string name="str_common_tuesday">Tues</string>
    <string name="str_common_wednesday">Wed</string>
    <string name="str_common_thursday">Thur</string>
    <string name="str_common_friday">Fri</string>
    <string name="str_common_saturday">Sat</string>
    <string name="str_common_sunday">Sun</string>
    <string name="str_common_monday_fullname">Monday</string>
    <string name="str_common_tuesday_fullname">Tuesday</string>
    <string name="str_common_wednesday_fullname">Wednesday</string>
    <string name="str_common_thursday_fullname">Thursday</string>
    <string name="str_common_friday_fullname">Friday</string>
    <string name="str_common_saturday_fullname">Saturday</string>
    <string name="str_common_sunday_fullname">Sunday</string>
    <string name="str_common_date">%2$s/%3$s/%1$s</string>
    <string name="str_common_date2">%1$s-%2$s-%3$s</string>
    <string name="str_comomon_take_photo_or_choose_from_pictures">Take a picture or choose from gallery</string>
    <string name="str_common_week">W%1$s</string>
    <string name="str_common_month">M%1$s</string>
    <string name="str_common_year">Y%1$s</string>
    <string name="str_common_day">D%1$s</string>
    <string name="str_common_today">Today</string>
    <string name="str_common_start">ON</string>
    <string name="str_common_update_data">Please update data</string>
    <string name="str_common_data_updating">Updating data</string>
    <string name="str_common_yes">Yes</string>
    <string name="str_common_no">No</string>
    <string name="str_common_name">Name</string>
    <string name="str_common_area">Region</string>
    <string name="str_common_try_again">Retry</string>
    <string name="str_common_know">I know it</string>
    <string name="str_common_pause">Pause</string>
    <string name="str_common_calendar">Calender</string>
    <string name="str_common_file_not_exits">File does not exist</string>
    <string name="str_common_minute">min</string>
    <string name="str_common_second">sec</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_common_developing">Under development</string>
    <string name="str_common_action">Action</string>
    <string name="str_common_loading_format">Loading(%1$d%%)...</string>
    <string name="str_common_saving">Saving...</string>
    <string name="str_common_loading">Loading...</string>
    <string name="str_common_performing">Performing...</string>
    <string name="str_common_got_it">Got it</string>
    <string name="str_common_not_support_remote_operations">Does not support remote control</string>
    <string name="str_common_too_frequent_operation">Too frequent operations</string>
    <string name="str_common_network_library_initialization_failed">Failed to initialize network library</string>
    <string name="str_common_failed_dns">DNS lookup failed</string>
    <string name="str_common_device_pair_again">Device needs to be re-configured</string>
    <string name="str_common_invalid_packet_received">Data packet received is invalid</string>
    <string name="str_common_system_call_failed">Fail in system calling, error code: %1%s</string>
    <string name="str_common_device_out_of_lan">The device is not connected to WLAN</string>
    <string name="str_common_authentication_failed_and_device_reset">Authentication failed. The device has been reset.</string>
    <string name="str_common_error_script_validation">Script validation error</string>
    <string name="str_common_error_execution_script">Script execution error</string>
    <string name="str_common_time_out">Network time out</string>
    <string name="str_devices_off_line">Device is offline</string>
    <string name="str_common_cancel_configuration">User canceled configuration</string>
    <string name="str_common_failed_account_verification">User account validation failed</string>
    <string name="str_common_data_error">Data error. Error code: %1$s</string>
    <string name="str_common_control_failed">Control failed. Error code: %1$s</string>
    <string name="str_common_authentication_failed">Authentication failed. Error code: %1$s</string>
    <string name="str_common_error_script">Script error.</string>
    <string name="str_common_error_ssl">SSL error. Error code: %1$s</string>
    <string name="str_common_server_init">Sever authenticating</string>
    <string name="str_common_net_disconnect">Querying information failed</string>
    <string name="str_common_info_disconnect">Scanning to add device currently is not supported. Please manually add the device.</string>
    <string name="str_common_error_code">Error code:%1d</string>
    <string name="unsupported_protocol_version">Unsupported protocol version</string>
    <string name="invalid_request">Server is busy</string>
    <string name="request_timeout">Request timeout</string>
    <string name="user_did_not_sign_in">User did not log in</string>
    <string name="no_permission">No permission</string>
    <string name="home_does_not_exist">Home does not exist</string>
    <string name="qrcode_is_invalid">QR code is invalid</string>
    <string name="invalid_QR_code">Invalid QR code</string>
    <string name="user_is_already_a_home_member">User is already a home member</string>
    <string name="user_is_not_a_home_member">User is not a home member</string>
    <string name="home_creator_cannot_be_deleted">Home creator cannot be deleted</string>
    <string name="home_information_is_expired">Home information is expired</string>
    <string name="unknown_barcode">Unknown barcode</string>
    <string name="cannot_delete_the_room_because_it_contains_devices">Cannot delete the room because it contains devices</string>
    <string name="cannot_delete_the_room_because_it_contains_modules">Cannot delete the room because it contains modules</string>
    <string name="cannot_edit_the_room_because_it_no_contains_modules">The room has no equipment and cannot operate</string>
    <string name="cannot_find_this_product">Cannot find this product</string>
    <string name="data_conflicted">Data conflicted</string>
    <string name="not_beta_user">Not beta user</string>
    <string name="name_conflicted">Name conflicted</string>
    <string name="not_original_mobile_phone_number_of_registered_user">Not original mobile phone number of registered user</string>
    <string name="cannot_quit_from_the_home_you_created">Cannot quit from the home you created</string>
    <string name="key_value_not_allowed">Key value not allowed</string>
    <string name="too_many_devices_in_the_home">Too many devices in the home</string>
    <string name="str_account_hint_password">Please enter the password</string>
    <string name="str_account_hint_account">Phone number or email</string>
    <string name="str_account_forget_password">Forget password?</string>
    <string name="str_account_signin">Log in</string>
    <string name="Device_Control">设备管理</string>
    <string name="Account_Control">账户管理</string>
    <string name="Family_Control">家庭管理</string>
    <string name="IRCode_Control">红外码管理</string>
    <string name="Device_Control_Main">设备管理主页</string>
    <string name="Config_Device">设备配网</string>
    <string name="Probe_Device_List">设备局域网扫描</string>
    <string name="My_Device_List">我的设备列表</string>
    <string name="Input_SSID">请输入SSID</string>
    <string name="Input_PASSWORD">请输入密码</string>
    <string name="Config_2_Device">2代配网</string>
    <string name="Config_3_Device">3代配网</string>
    <string name="Config_AP_Device">AP配网</string>
    <string name="Device_More_View">Device More</string>
    <string name="Query_SERVER_TIME">Query SERVER TIME</string>
    <string name="DEVICE_STATUS">DEVICE STATUS</string>
    <string name="Script_Verision">Script Verision</string>
    <string name="Script_Download">Script Download</string>
    <string name="UI_Verision">UI Verision</string>
    <string name="UI_Download">UI Download</string>
    <string name="Standard_DnaControl">Standard DnaControl</string>
    <string name="WebControl">WebControl</string>
    <string name="SPControl">SPControl</string>
    <string name="RMControl">RMControl</string>
    <string name="Gateway_Control">Gateway Control</string>
    <string name="Start_Scan">Start Scan</string>
    <string name="Get_New_SubDev">Get New SubDev List</string>
    <string name="Add_SubDev">Add SubDev</string>
    <string name="Del_SubDev">Delete SubDev</string>
    <string name="Query_SubDev_List">Query SubDev List</string>
    <string name="Get_TC_PAIR_STATUS">Get TC PAIR STATUS</string>
    <string name="Set_TC_PAIR_STATUS">Set TC PAIR STATUS</string>
    <string name="Set_TC_POWER">Set TC POWER</string>
    <string name="Recognize_IRCode_View">Recognize IRCode</string>
    <string name="Recognize_IRCode">Recognize IRCode</string>
    <string name="Download_IRCode">Download IRCode script</string>
    <string name="Get_IRCode_Base_Info">Get IRCode Base Info</string>
    <string name="Get_IRCode_Data">Get IRCode Data</string>
</resources>