<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cn.com.broadlink.blappsdkdemo.activity.account.AccountUserNameLoginActivity">


    <cn.com.broadlink.blappsdkdemo.view.InputTextView
        android:id="@+id/et_username"
        style="@style/commonInput"
        app:hint="@string/str_account_hint_account"/>

    <cn.com.broadlink.blappsdkdemo.view.InputTextView
        android:id="@+id/et_password"
        style="@style/commonInput"
        android:layout_marginTop="20dp"
        app:hint="@string/str_account_hint_password"/>

    <Button
        android:id="@+id/bt_login"
        style="@style/commitBtn"
        android:layout_marginTop="20dp"
        android:text="@string/str_account_signin"/>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:textColor="@color/bl_yellow_main_color"
        android:text="@string/str_account_forget_password"
        />


</LinearLayout>
