<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_main"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="20dp"
              android:orientation="vertical">

    <Button
        android:id="@+id/btn_config_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Config_Device"/>

    <Button
        android:id="@+id/btn_probe_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Probe_Device_List"/>

    <Button
        android:id="@+id/btn_my_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/My_Device_List"/>


</LinearLayout>

